Checkbox edited highlight;
* Checkbox with value changed now gets highlighted label background
* Font color set to off black so that it is retained in dark mode - previously would flip to white;
* Input border color moved to color root variable.

--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -12,6 +12,7 @@
   --color-no: #a21309;
   --color-changed: #ffffa7;
   --color-ok: #0b6f50;
+  --color-input-border: #ccc;
   --dm-color-on: #e18335;
   --dm-color-medium: #555555;
   --dm-color-dark-faded: #333333;
