--- a/public/css/_inputs.css
+++ b/public/css/_inputs.css
@@ -43,7 +43,7 @@ input[type='search'],
 input[type='date'],
 input[type='time'],
 input[type='datetime-local'] {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color-input-border);
   padding: 5px;
 
   &:focus {
