--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -38,16 +38,27 @@
   width: 1.5em;
 }
 
-.val-changed input {
-  background-color: var(--color-changed);
-}
+.val-changed {
+  input {
+    background-color: var(--color-changed);
+  }
 
-.val-changed textarea {
-  background-color: var(--color-changed);
-}
+  textarea {
+    background-color: var(--color-changed);
+  }
 
-.val-changed button {
-  background-color: var(--color-changed);
+  button {
+    background-color: var(--color-changed);
+  }
+
+  label.checkbox {
+    span:nth-child(3) {
+      background-color: var(--color-changed);
+      color: var(--color-off-black);
+      padding: 0 0.5em;
+      border-radius: 2px;
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
