--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1507,14 +1507,34 @@ dialog {
     width: 1em;
     margin: 0.4em;
   }
+  & > .content {
+    padding: 1em;
+  }
   & > header {
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: -1px;
+    left: 0;
+    background-color: inherit;
+    padding: 1em;
+    & > :first-child {
+      margin-right: 5em;
+    }
     & > :nth-child(2) {
       margin-left: auto;
     }
     & > .material-symbols-outlined {
       font-size: 1.2em;
+      &:after {
+        color: var(--color-primary-light);
+        font-size: inherit;
+      }
+    }
+    & button {
+      height: 1em;
+      width: 1em;
+      margin: 0.4em;
     }
   }
   &.dialog {
@@ -1536,13 +1556,6 @@ dialog {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
-  }
-  header {
-    & button {
-      height: 1em;
-      width: 1em;
-      margin: 0.4em;
-    }
   }
   .minimize-btn::after {
     content: "minimize";
