Input text - added highlight rule;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -350,7 +350,8 @@ html.dark-mode {
   width: 1.5em;
 }
 .val-changed {
-  input {
+  input,
+  input[type=text] {
     background-color: var(--color-changed);
   }
   textarea {
