--- a/public/css/base/_inputs.css
+++ b/public/css/base/_inputs.css
@@ -26,6 +26,10 @@ textarea {
   border: none;
   border-bottom: 0.5px dotted;
   background-color: var(--color-light-secondary);
+
+  &:focus {
+    outline: none;
+  }
 }
 
 input[type='number'] {
