--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -124,7 +124,7 @@ html.dark-mode {
     }
   }
   textarea {
-    background-color: var(--dm-color-light-darker);
+    background-color: var(--dm-color-medium);
     color: var(--dm-color-light);
   }
   .active > .material-symbols-outlined {
@@ -1230,6 +1230,9 @@ textarea {
   border: none;
   border-bottom: 0.5px dotted;
   background-color: var(--color-light-secondary);
+  &:focus {
+    outline: none;
+  }
 }
 input[type=number] {
   -moz-appearance: textfield;
