--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -68,7 +68,9 @@ html.dark-mode {
 
   input[type='number'],
   input[type='text'],
-  input[type='search'] {
+  input[type='search'],
+  input[type='date'],
+  input[type='datetime-local'] {
     background: var(--dm-color-medium);
     color: var(--dm-color-light);
     border-color: var(--dm-color-dark-faded);
@@ -88,6 +90,18 @@ html.dark-mode {
   textarea {
     background-color: var(--dm-color-medium);
     color: var(--dm-color-light);
+  }
+  /* common val changed class */
+  .val-changed {
+    input[type='number'],
+    input[type='text'],
+    input[type='search'],
+    input[type='date'],
+    input[type='datetime-local'],
+    textarea {
+      background-color: var(--color-changed);
+      color: var(--color-off-black);
+    }
   }
 
   /* end inputs */
