--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -93,6 +93,7 @@ html.dark-mode {
   }
   /* common val changed class */
   .val-changed {
+    .dropdown > .head,
     input[type='number'],
     input[type='text'],
     input[type='search'],
@@ -100,6 +101,10 @@ html.dark-mode {
     input[type='datetime-local'],
     textarea {
       background-color: var(--color-changed);
+      color: var(--color-off-black);
+    }
+
+    .dropdown > .head > .material-symbols-outlined:after {
       color: var(--color-off-black);
     }
   }
@@ -165,6 +170,11 @@ html.dark-mode {
 
     &.active .head {
       background: var(--dm-color-on);
+
+      & > .material-symbols-outlined:after {
+        color: var(--color-off-black);
+        background-color: transparent;
+      }
     }
 
     ul {
