--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -61,283 +61,6 @@
   color: var(--color-no);
 }
 
-/* public/css/base/_dark_mode.css */
-html.dark-mode {
-  button {
-    color: var(--dm-color-light);
-    &.primary-colour {
-      color: var(--dm-color-light);
-    }
-    &.active {
-      color: var(--dm-color-on);
-    }
-    & > .primary-colour {
-      color: var(--dm-color-light);
-    }
-  }
-  .primary-colour {
-    color: var(--color-light);
-    &.active {
-      color: var(--color-on);
-    }
-  }
-  .lighter-background {
-    background-color: var(--dm-color-dark-faded);
-  }
-  .bg-light-tertiary {
-    background-color: var(--dm-color-dark-faded);
-  }
-  .input-range.single {
-    &::after,
-    &::before {
-      background:
-        linear-gradient(
-          0deg,
-          transparent 0 45%,
-          var(--color-light) 45% 55%,
-          transparent 55% 100%);
-    }
-  }
-  #ctrl-panel {
-    background-color: var(--dm-color-dark-neutral);
-  }
-  #ctrl-tabs {
-    background-color: var(--dm-color-darker);
-  }
-  a {
-    color: var(--dm-color-on);
-  }
-  input[type=number],
-  input[type=text],
-  input[type=search],
-  input[type=date],
-  input[type=datetime-local] {
-    background: var(--dm-color-medium);
-    color: var(--dm-color-light);
-    border-color: var(--dm-color-dark-faded);
-  }
-  input[type=search] {
-    &::placeholder {
-      color: var(--dm-color-light-darker);
-      opacity: 1;
-    }
-    &::-ms-input-placeholder {
-      color: var(--dm-color-light-darker);
-    }
-  }
-  textarea {
-    background-color: var(--dm-color-medium);
-    color: var(--dm-color-light);
-  }
-  .val-changed {
-    .dropdown > .head,
-    input[type=number],
-    input[type=text],
-    input[type=search],
-    input[type=date],
-    input[type=datetime-local],
-    textarea {
-      background-color: var(--color-changed);
-      color: var(--color-off-black);
-    }
-    label.checkbox > .material-symbols-outlined:after,
-    .dropdown > .head > .material-symbols-outlined:after {
-      color: var(--color-off-black);
-    }
-  }
-  .active > .material-symbols-outlined {
-    color: var(--dm-color-on);
-  }
-  .material-symbols-outlined {
-    color: var(--dm-color-light-secondary);
-    &.no-colour {
-      color: var(--dm-color-no);
-    }
-    &.ok-colour {
-      color: var(--color-ok);
-    }
-    &.active {
-      color: var(--dm-color-on);
-    }
-  }
-  dialog {
-    color: var(--dm-color-light);
-    background-color: var(--dm-color-dark-faded);
-    &.alert-confirm h4 {
-      background-color: var(--color-on);
-    }
-  }
-  .drawer {
-    background-color: var(--dm-color-dark-faded);
-    color: var(--color-light-secondary);
-    border: none;
-    &.top-btn {
-      color: var(--color-light-secondary);
-    }
-    &.panel {
-      background-color: var(--dm-dark-neutral);
-    }
-  }
-  .dropdown {
-    box-shadow: 0px 0px 0px 0px;
-    &.active .head {
-      background: var(--dm-color-on);
-      & > .material-symbols-outlined:after {
-        color: var(--color-off-black);
-        background-color: transparent;
-      }
-    }
-    ul {
-      &.label {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-    ul > li,
-    .head {
-      background: var(--dm-color-medium);
-      color: var(--dm-color-light);
-      border-color: var(--dm-color-dark-faded);
-      > .material-symbols-outlined:after {
-        color: var(--color-light);
-      }
-    }
-    ul > li {
-      &:hover {
-        background: var(--dm-color-dark-faded);
-      }
-      &.selected {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-  }
-  .key {
-    button.layer-key {
-      &.active {
-        background-color: var(--dm-color-on);
-        color: var(--dm-color-darker);
-      }
-    }
-  }
-  .searchbox {
-    box-shadow: unset;
-    & > ul {
-      background-color: var(--dm-color-medium);
-      & li {
-        color: var(--color-light);
-      }
-    }
-  }
-  #ctrls-divider,
-  #tabview-divider {
-    background-color: var(--dm-color-dark-faded);
-  }
-  #layers {
-    & > .drawer.layer-group .drawer.layer-view {
-      background-color: var(--dm-color-dark-faded);
-      border-top: 1px solid var(--dm-color-medium);
-    }
-    & > .layer-view > .drawer {
-      background-color: var(--dm-color-dark-faded);
-    }
-    .drawer.layer-view .drawer {
-      background-color: var(--dm-color-dark-neutral);
-    }
-  }
-  .location-view-grid {
-    .layer-key > span {
-      background-color: var(--dm-color-on);
-    }
-    .location canvas {
-      filter: invert(1);
-    }
-  }
-  #mapButton {
-    background-color: var(--dm-color-darker);
-  }
-  .popup {
-    background-color: var(--dm-color-medium);
-    box-shadow: unset;
-    border: solid 1px var(--dm-color-dark-faded);
-    color: var(--color-light);
-    & button.primary-colour {
-      color: var(--color-on);
-      & > * {
-        color: var(--color-on);
-      }
-    }
-    &:after {
-      border-top-color: var(--dm-color-medium);
-    }
-    & li:hover {
-      background: var(--dm-color-dark-faded);
-    }
-  }
-  ::-webkit-scrollbar-track {
-    background: var(--dm-color-dark-medium);
-  }
-  ::-webkit-scrollbar-thumb {
-    background: var(--dm-color-on);
-  }
-  ::-webkit-scrollbar-corner {
-    background: var(--dm-color-dark-faded);
-  }
-  .tabview,
-  .location,
-  .dataview-target {
-    .panel {
-      background-color: var(--dm-color-dark-neutral);
-      .btn-row {
-        background-color: var(--dm-color-dark-neutral);
-        button {
-          color: var(--dm-color-on);
-          background: var(--dm-color-dark-faded);
-        }
-      }
-      & > .flex-col {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-    .tabs,
-    .tabulator-tableholder {
-      background: var(--dm-color-darker);
-    }
-    .tab {
-      .header {
-        color: var(--dm-color-light);
-        background-color: var(--dm-color-dark-faded);
-      }
-      &.active .header {
-        background-color: var(--dm-color-on);
-      }
-    }
-    .tabulator-footer {
-      background-color: var(--dm-color-dark);
-      .tabulator-page {
-        color: var(--dm-color-light);
-        &.active {
-          color: var(--dm-color-on);
-        }
-      }
-    }
-    .tabulator-header {
-      background: var(--dm-color-dark);
-    }
-    .tabulator-col {
-      background-color: var(--dm-color-dark-faded);
-      color: var(--dm-color-light);
-    }
-    .tabulator-row {
-      color: var(--dm-color-light);
-      &.tabulator-row-odd {
-        background-color: var(--dm-color-dark-neutral);
-      }
-      &.tabulator-row-even {
-        background-color: var(--dm-color-medium);
-      }
-    }
-  }
-}
-
 /* public/css/base/_common.css */
 .display-none {
   display: none !important;
@@ -2223,7 +1946,7 @@ dialog {
     height: 100%;
     grid-row: 1/4;
     grid-column: 3;
-    background-color: var(--dm-color-light);
+    background-color: var(--color-light);
     opacity: 0.8;
   }
 }
@@ -2237,7 +1960,7 @@ dialog {
     & > a {
       margin-bottom: 10px;
       background-color: var(--color-light);
-      box-shadow: 1px 1px 3px var(--dm-color-medium);
+      box-shadow: 1px 1px 3px var(--color-medium);
       border-radius: 50%;
       opacity: 0.9;
       padding: 5px;
