fix material icons bundle size

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0);
 
 .material-symbols-outlined {
   font-variation-settings:
