add sans fallback

--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -36,11 +36,11 @@
     }
 
     .material-icons {
-      font-family: 'Material Symbols Outlined';
+      font-family: 'Material Symbols Outlined', sans-serif;
       font-size: 24px;
       color: black;
     }
-    
+
     .btn-row {
       align-items: center;
       justify-content: space-between;
