--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -130,7 +130,7 @@
     // Get list of available roles from workspace.
     const rolesList = await xhrPromise(`${document.head.dataset.dir}/api/workspace/roles`)
 
-    // List of languages key values. 
+    // List of languages key values.
     const languagesList = {
       "en": "English",
       "de": "German",
@@ -392,7 +392,7 @@
 
       let rowData = cell.getRow().getData()
       //create and style editor
-      var editor = document.createElement("input");
+      let editor = document.createElement("input");
 
       editor.setAttribute("type", "date");
 
@@ -527,7 +527,7 @@
 
       xhr.send()
     })
-  } 
+  }
 </script>
 
 </html>
