Create update util for json dataview

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0);
 
+.material-symbols-outlined-important {
+  font-family: 'Material Symbols Outlined' !important;
+}
+
 .material-symbols-outlined {
   font-variation-settings:
     'FILL' 0,
