--- a/public/css/_inputs.css
+++ b/public/css/_inputs.css
@@ -274,12 +274,12 @@ label.checkbox {
 
   & .label-row {
     grid-row: 1;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
   }
 
   & .track-bg {
     grid-row: 2;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     background: linear-gradient(
       0deg,
       transparent 0 45%,
@@ -290,7 +290,7 @@ label.checkbox {
   }
 
   &.single::after {
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     grid-row: 2;
     background: linear-gradient(
       0deg,
@@ -315,7 +315,7 @@ label.checkbox {
 
     &::before,
     &::after {
-      grid-column: 1/3;
+      grid-column: 1 / 3;
       grid-row: 2;
       background: linear-gradient(
         0deg,
@@ -329,14 +329,20 @@ label.checkbox {
 
     &::before {
       margin-left: calc(
-        10px + (var(--a) - var(--min)) / var(--dif) * (100% - 10px)
+        10px +
+        (var(--a) - var(--min)) /
+        var(--dif) *
+        (100% - 10px)
       );
       width: calc((var(--b) - var(--a)) / var(--dif) * (100% - 10px));
     }
 
     &::after {
       margin-left: calc(
-        10px + (var(--b) - var(--min)) / var(--dif) * (100% - 10px)
+        10px +
+        (var(--b) - var(--min)) /
+        var(--dif) *
+        (100% - 10px)
       );
       width: calc((var(--a) - var(--b)) / var(--dif) * (100% - 10px));
     }
@@ -344,7 +350,7 @@ label.checkbox {
 
   & input[type='range'] {
     -webkit-appearance: none;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     grid-row: 2;
     z-index: 3;
     top: 0;
