--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -31,9 +31,8 @@
       display: flex;
       align-items: center;
       white-space: nowrap;
-      box-shadow:
-        rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-        rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3)
+        0px 1px 3px -1px;
       border-radius: 3px 1em 0 0;
       padding: 10px;
       -webkit-user-select: none;
