--- a/public/views/login/_login.css
+++ b/public/views/login/_login.css
@@ -2,9 +2,7 @@ body {
   margin: 0 auto !important;
   padding: 50px;
   max-width: 600px;
-  font:
-    14px 'Open Sans',
-    sans-serif;
+  font: 14px 'Open Sans', sans-serif;
 }
 
 @media only screen and (max-width: 700px) {
