map toolbar css;
Buttons in map toolbar have now centered text and initial line height instead of standard line-height: 1;

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -8,6 +8,7 @@
     'opsz' 24;
   /* Customisation */
   text-align: center;
+  line-height: initial;
   color: var(--color-primary);
 
   &.active {
