--- a/public/css/layout/_map_toolbar.css
+++ b/public/css/layout/_map_toolbar.css
@@ -27,6 +27,7 @@
     & > button,
     & > a {
       margin-bottom: 10px;
+      text-align: center;
       background-color: var(--color-light);
       box-shadow: 1px 1px 3px var(--dm-color-medium);
       border-radius: 50%;
