--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1313,6 +1313,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
     "GRAD" 0,
     "opsz" 24;
   text-align: center;
+  line-height: initial;
   color: var(--color-primary);
   &.active {
     color: var(--color-on);
@@ -2242,6 +2243,7 @@ dialog {
     & > button,
     & > a {
       margin-bottom: 10px;
+      text-align: center;
       background-color: var(--color-light);
       box-shadow: 1px 1px 3px var(--dm-color-medium);
       border-radius: 50%;
