material icons - line height set to normal on mobile;

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -8,7 +8,7 @@
     'opsz' 24;
   /* Customisation */
   text-align: center;
-  line-height: initial;
+  line-height: 1;
   color: var(--color-primary);
 
   &.active {
