--- a/public/css/layout/_map_toolbar.css
+++ b/public/css/layout/_map_toolbar.css
@@ -35,6 +35,10 @@
       padding: 5px;
       width: 3em;
       height: 3em;
+
+      & > span.material-symbols-outlined {
+        line-height: normal;
+      }
     }
   }
 }
