--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1313,7 +1313,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
     "GRAD" 0,
     "opsz" 24;
   text-align: center;
-  line-height: initial;
+  line-height: 1;
   color: var(--color-primary);
   &.active {
     color: var(--color-on);
@@ -2251,6 +2251,9 @@ dialog {
       padding: 5px;
       width: 3em;
       height: 3em;
+      & > span.material-symbols-outlined {
+        line-height: normal;
+      }
     }
   }
 }
