Align CSS with mobile view
1. mapButton has no background colour
2. individual buttons have background colour
3. Dark Mode fixes for this too

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
 
 /* public/css/base/_colours.css */
 :root {
@@ -252,7 +252,10 @@ html.dark-mode {
     }
   }
   #mapButton {
-    background-color: var(--dm-color-darker);
+    & > button,
+    & > a {
+      background-color: var(--dm-color-medium);
+    }
   }
   .popup {
     background-color: var(--dm-color-medium);
@@ -333,15 +336,6 @@ html.dark-mode {
       }
       &.tabulator-row-even {
         background-color: var(--dm-color-medium);
-      }
-    }
-  }
-  @media only screen and (max-width: 768px) {
-    #mapButton {
-      background-color: transparent;
-      button,
-      a {
-        background-color: var(--dm-color-darker);
       }
     }
   }
@@ -1519,24 +1513,11 @@ dialog {
   & > header {
     display: flex;
     justify-content: space-between;
-    position: sticky;
-    top: -1px;
-    left: 0;
-    background-color: inherit;
     & > :nth-child(2) {
       margin-left: auto;
     }
     & > .material-symbols-outlined {
       font-size: 1.2em;
-      &:after {
-        color: var(--color-primary-light);
-        font-size: inherit;
-      }
-    }
-    & button {
-      height: 1em;
-      width: 1em;
-      margin: 0.4em;
     }
   }
   &.dialog {
@@ -1558,6 +1539,13 @@ dialog {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
+  }
+  header {
+    & button {
+      height: 1em;
+      width: 1em;
+      margin: 0.4em;
+    }
   }
   .minimize-btn::after {
     content: "minimize";
@@ -1820,11 +1808,11 @@ dialog {
   width: 100%;
   & .label-row {
     grid-row: 1;
-    grid-column: 1 / 3;
+    grid-column: 1/3;
   }
   & .track-bg {
     grid-row: 2;
-    grid-column: 1 / 3;
+    grid-column: 1/3;
     background:
       linear-gradient(
         0deg,
@@ -1834,7 +1822,7 @@ dialog {
     z-index: 1;
   }
   &.single::after {
-    grid-column: 1 / 3;
+    grid-column: 1/3;
     grid-row: 2;
     background:
       linear-gradient(
@@ -1856,7 +1844,7 @@ dialog {
     }
     &::before,
     &::after {
-      grid-column: 1 / 3;
+      grid-column: 1/3;
       grid-row: 2;
       background:
         linear-gradient(
@@ -1879,7 +1867,7 @@ dialog {
   & input[type=range] {
     -webkit-appearance: none;
     appearance: none;
-    grid-column: 1 / 3;
+    grid-column: 1/3;
     grid-row: 2;
     z-index: 3;
     top: 0;
@@ -1931,7 +1919,7 @@ dialog {
 
 /* public/css/layout/_divider.css */
 #ctrls-divider {
-  grid-row: 1 / 4;
+  grid-row: 1/4;
   grid-column: 2;
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0D%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0D%0A</svg>');
   background-repeat: no-repeat;
@@ -2222,14 +2210,24 @@ dialog {
   & > * {
     pointer-events: auto;
   }
+  & > button,
+  & > a {
+    margin-bottom: 10px;
+    background-color: var(--color-light);
+    box-shadow: 1px 1px 3px var(--dm-color-medium);
+    border-radius: 50%;
+    opacity: 0.9;
+    padding: 5px;
+    width: 3em;
+    height: 3em;
+  }
 }
 @media only screen and (min-width: 768px) {
   #mapButton {
     position: absolute;
     height: 100%;
-    grid-row: 1 / 4;
+    grid-row: 1/4;
     grid-column: 3;
-    background-color: var(--dm-color-light);
     opacity: 0.8;
   }
 }
@@ -2239,17 +2237,6 @@ dialog {
     top: 0;
     left: 0;
     height: 100%;
-    & > button,
-    & > a {
-      margin-bottom: 10px;
-      background-color: var(--color-light);
-      box-shadow: 1px 1px 3px var(--dm-color-medium);
-      border-radius: 50%;
-      opacity: 0.9;
-      padding: 5px;
-      width: 3em;
-      height: 3em;
-    }
   }
 }
 
@@ -2342,15 +2329,11 @@ dialog {
   display: grid;
   grid-auto-rows: minmax(min-content, 4em);
   padding: 0.7em;
-  & span {
-    line-height: normal;
-  }
   & button,
   & > div,
   & > a {
     width: 2em;
     height: 2em;
-    text-align: center;
   }
   & a > div,
   & button > div {
