--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";
 
 /* public/css/base/_colours.css */
 :root {
@@ -1513,11 +1513,24 @@ dialog {
   & > header {
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: -1px;
+    left: 0;
+    background-color: inherit;
     & > :nth-child(2) {
       margin-left: auto;
     }
     & > .material-symbols-outlined {
       font-size: 1.2em;
+      &:after {
+        color: var(--color-primary-light);
+        font-size: inherit;
+      }
+    }
+    & button {
+      height: 1em;
+      width: 1em;
+      margin: 0.4em;
     }
   }
   &.dialog {
@@ -1539,13 +1552,6 @@ dialog {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
-  }
-  header {
-    & button {
-      height: 1em;
-      width: 1em;
-      margin: 0.4em;
-    }
   }
   .minimize-btn::after {
     content: "minimize";
@@ -1808,11 +1814,11 @@ dialog {
   width: 100%;
   & .label-row {
     grid-row: 1;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
   }
   & .track-bg {
     grid-row: 2;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     background:
       linear-gradient(
         0deg,
@@ -1822,7 +1828,7 @@ dialog {
     z-index: 1;
   }
   &.single::after {
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     grid-row: 2;
     background:
       linear-gradient(
@@ -1844,7 +1850,7 @@ dialog {
     }
     &::before,
     &::after {
-      grid-column: 1/3;
+      grid-column: 1 / 3;
       grid-row: 2;
       background:
         linear-gradient(
@@ -1867,7 +1873,7 @@ dialog {
   & input[type=range] {
     -webkit-appearance: none;
     appearance: none;
-    grid-column: 1/3;
+    grid-column: 1 / 3;
     grid-row: 2;
     z-index: 3;
     top: 0;
@@ -1919,7 +1925,7 @@ dialog {
 
 /* public/css/layout/_divider.css */
 #ctrls-divider {
-  grid-row: 1/4;
+  grid-row: 1 / 4;
   grid-column: 2;
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0D%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0D%0A</svg>');
   background-repeat: no-repeat;
@@ -2226,7 +2232,7 @@ dialog {
   #mapButton {
     position: absolute;
     height: 100%;
-    grid-row: 1/4;
+    grid-row: 1 / 4;
     grid-column: 3;
     opacity: 0.8;
   }
@@ -2329,11 +2335,15 @@ dialog {
   display: grid;
   grid-auto-rows: minmax(min-content, 4em);
   padding: 0.7em;
+  & span {
+    line-height: normal;
+  }
   & button,
   & > div,
   & > a {
     width: 2em;
     height: 2em;
+    text-align: center;
   }
   & a > div,
   & button > div {
