--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -127,10 +127,6 @@
           position: absolute;
         }
 
-        .map-attribution {
-          padding-left: 4em;
-        }
-
         #ctrl-panel {
           transform: rotateY(180deg);
         }
@@ -489,7 +485,7 @@
 
       // Append spacer for tableview
       document.getElementById('mapButton').append(mapp.utils.html.node`
-    <div class="mobile-display-none" style="height: 60px;">`);
+    <div class="mobile-display-none" style="opacity: 0; height: 60px;">`);
     </script>
   </body>
 </html>
