rename #mapButton to class specificity.

--- a/public/css/layout/_map_toolbar.css
+++ b/public/css/layout/_map_toolbar.css
@@ -1,4 +1,4 @@
-#mapButton {
+.btn-column {
   pointer-events: none;
 
   & > * {
@@ -18,7 +18,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  #mapButton {
+  .btn-column {
     position: absolute;
     height: 100%;
     grid-row: 1 / 4;
@@ -28,7 +28,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  #mapButton {
+  .btn-column {
     position: fixed;
     top: 0;
     left: 0;
