--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -284,7 +284,7 @@ html.dark-mode {
 
   /* begin map toolbar */
 
-  #mapButton {
+  .btn-column {
     & > button,
     & > a {
       background-color: var(--dm-color-medium);
