Removal of redundant variables;
Removed:
dm-color-dark
dm-color-darker
color-light

--- a/public/css/_dialog.css
+++ b/public/css/_dialog.css
@@ -69,7 +69,7 @@ dialog.alert-confirm h4 {
   padding: 0.5em 1em;
   background-color: var(--color-primary);
   border-bottom: solid 2px var(--color-primary-light);
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
 }
 
 dialog.alert-confirm .content {
