--- a/public/css/elements/_alert_confirm.css
+++ b/public/css/elements/_alert_confirm.css
@@ -16,7 +16,7 @@ dialog.alert-confirm {
     padding: 0.5em 1em;
     background-color: var(--color-primary);
     border-bottom: solid 2px var(--color-primary-light);
-    color: var(--color-light);
+    color: var(--color-base-tertiary);
     width: 100%;
   }
 
