--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -1,12 +1,32 @@
 :root {
-  /* light colour mode */
-  --color-off-black: #3f3f3f;
+  /* begin unified colour palette */
 
-  --color-primary: #003d57;
+  /* Backgrounds */
+  --color-base-primary: #f2f2f2;
+  --color-base-secondary: #f2f2f2;
+  --color-base-tertiary: #ffffff;
+
+  /* Text */
+  --color-base-text: #3f3f3f;
+
+  /* Accent */
+  --color-accent-primary:  #003d57;
+  --color-accent-active: #d57120;
+
+  /* Information */
+  --color-info: #0b6f50;
+  --color-blocked: #a21309;
+  --color-changed: #ffffa7;
+
+  /* end unified colour palette */
+
+
+  /* light colour mode */
+  --color-off-black: #3f3f3f; /* color-base-text */
+
+  --color-primary: #003d57; /* color-accent-primary */
 
   --color-primary-light: #939faa;
-
-  --color-light: #ffffff;
 
   --color-off-light: #eeeeee;
 
@@ -16,29 +36,25 @@
 
   --color-mid: #e3e3e3;
 
-  --color-on: #d57120;
+  --color-on: #d57120; /* color-accent-active */
 
-  --color-no: #a21309;
+  --color-no: #a21309; /* color-blocked */
 
-  --color-changed: #ffffa7;
+  /* --color-changed: #ffffa7; color-changed */
 
-  --color-ok: #0b6f50;
+  --color-ok: #0b6f50; /* color-info */
 
   --color-input-border: #ccc;
 
   /* dark colour mode */
 
-  --dm-color-on: #e18335;
+  --dm-color-on: #e18335; /* --color-accent-active */
 
-  --dm-color-medium: #555555;
+  --dm-color-medium: #555555; /* --color-base-tertiary */
 
-  --dm-color-dark-faded: #333333;
+  --dm-color-dark-faded: #333333; /* --color-base-secondary */
 
-  --dm-color-dark-neutral: #222222;
-
-  --dm-color-dark: #111111;
-
-  --dm-color-darker: #151515;
+  --dm-color-dark-neutral: #222222; /* --color-base-primary */
 
   --dm-color-light: #ffffff;
 
@@ -46,7 +62,7 @@
 
   --dm-color-light-darker: #d8d8d8;
 
-  --dm-color-no: #ef5350;
+  --dm-color-no: #ef5350; /* color-accent-active */
 }
 
 * {
@@ -61,16 +77,16 @@
 }
 
 .primary-background {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
   background-color: var(--color-primary);
 }
 
 .light-background {
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
 }
 
 .light-colour {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
 }
 
 .lighter-background {
@@ -82,7 +98,7 @@
 }
 
 .off-black-background {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
   background-color: var(--color-off-black);
 }
 
