--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -1,7 +1,7 @@
 .btn-panel {
   width: 100%;
   padding: 0.3em 0.5em;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   border: 1px solid var(--color-light-secondary);
   border-radius: 3px;
   box-shadow: 1px 1px 3px var(--color-primary-light);
@@ -28,7 +28,7 @@
     right: 0;
     z-index: 99;
     color: black;
-    background: var(--color-light);
+    background: var(--color-base-tertiary);
     overflow: hidden;
     padding: 1em 1.5em;
     opacity: 0;
@@ -50,7 +50,7 @@
       right: 0;
       z-index: 99;
       color: var(--color-off-black);
-      background: var(--color-light);
+      background: var(--color-base-tertiary);
       overflow: hidden;
       padding: 1em 1.5em;
       opacity: 0;
