--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -2,7 +2,7 @@
   width: 100%;
   overflow: visible;
   position: relative;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   box-shadow: var(--color-mid) 0px 8px 24px;
 
   &:disabled {
@@ -44,7 +44,7 @@
     box-shadow: 1px 1px 3px var(--color-primary-light);
     margin-top: -1px;
     text-align: left;
-    background-color: var(--color-light);
+    background-color: var(--color-base-tertiary);
     z-index: 997;
 
     & > li {
@@ -64,7 +64,7 @@
     & .label {
       padding: 0 6px;
       border-radius: 2px;
-      color: var(--color-light);
+      color: var(--color-base-tertiary);
       font-size: 80%;
       font-weight: bold;
       background-color: var(--color-primary);
