--- a/public/css/layout/_infotip.css
+++ b/public/css/layout/_infotip.css
@@ -3,7 +3,7 @@
   z-index: 998;
   margin: 0;
   padding: 5px;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.3s;
