--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -1,24 +1,29 @@
 /* public/css/base/_colours.css */
 :root {
+  --color-base-primary: #f2f2f2;
+  --color-base-secondary: #f2f2f2;
+  --color-base-tertiary: #ffffff;
+  --color-base-text: #3f3f3f;
+  --color-accent-primary: #003d57;
+  --color-accent-active: #d57120;
+  --color-info: #0b6f50;
+  --color-blocked: #a21309;
+  --color-changed: #ffffa7;
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
   --color-primary-light: #939faa;
-  --color-light: #ffffff;
   --color-off-light: #eeeeee;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
   --color-on: #d57120;
   --color-no: #a21309;
-  --color-changed: #ffffa7;
   --color-ok: #0b6f50;
   --color-input-border: #ccc;
   --dm-color-on: #e18335;
   --dm-color-medium: #555555;
   --dm-color-dark-faded: #333333;
   --dm-color-dark-neutral: #222222;
-  --dm-color-dark: #111111;
-  --dm-color-darker: #151515;
   --dm-color-light: #ffffff;
   --dm-color-light-secondary: #f2f2f2;
   --dm-color-light-darker: #d8d8d8;
@@ -32,14 +37,14 @@
   color: var(--color-primary);
 }
 .primary-background {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
   background-color: var(--color-primary);
 }
 .light-background {
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
 }
 .light-colour {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
 }
 .lighter-background {
   background-color: var(--color-light-secondary);
@@ -48,7 +53,7 @@
   color: var(--color-off-black);
 }
 .off-black-background {
-  color: var(--color-light);
+  color: var(--color-base-tertiary);
   background-color: var(--color-off-black);
 }
 .on-colour {
@@ -97,7 +102,7 @@
     display: block;
     margin: 1px;
     padding: 0;
-    color: var(--color-light);
+    color: var(--color-base-tertiary);
     font-weight: 700;
     text-decoration: none;
     font-size: inherit;
@@ -220,7 +225,7 @@ body {
   z-index: 998;
   margin: 0;
   padding: 5px;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.3s;
@@ -230,7 +235,7 @@ body {
 /* public/css/layout/_popup.css */
 .popup {
   position: absolute;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   bottom: 12px;
   transform: translate(-50%, 0);
   &::after,
@@ -241,7 +246,7 @@ body {
     pointer-events: none;
   }
   &::after {
-    border-top-color: var(--color-light);
+    border-top-color: var(--color-base-tertiary);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
