color-ok replaced with color-info.

--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -124,7 +124,7 @@ html.dark-mode {
     }
 
     &.ok-colour {
-      color: var(--color-ok);
+      color: var(--color-info);
     }
 
     &.active {
