--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -21,7 +21,6 @@
   --color-mid: #e3e3e3;
   --color-on: #d57120;
   --color-no: #a21309;
-  --color-ok: #0b6f50;
   --color-input-border: #ccc;
   --dm-color-on: #e18335;
   --dm-color-medium: #555555;
@@ -159,7 +158,7 @@ html.dark-mode {
       color: var(--dm-color-no);
     }
     &.ok-colour {
-      color: var(--color-ok);
+      color: var(--color-info);
     }
     &.active {
       color: var(--dm-color-on);
@@ -1324,7 +1323,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
     color: var(--color-no);
   }
   &.ok-colour {
-    color: var(--color-ok);
+    color: var(--color-info);
   }
   &.primary-light-colour {
     color: var(--color-primary-light);
